# xian_aqc_ws

./: .gitignore  README.MD  variable_list_jetson_communicate_with_PLC.MD
src/rtsp_to_ros/: CMakeLists.txt  package.xml
src/rtsp_to_ros/launch/: four_cam.launch
src/rtsp_to_ros/src/: rtsp_to_ros.cpp
src/xian_ai_pkg/: CMakeLists.txt  package.xml
src/xian_ai_pkg/src/: xian_cell_guide_recognition.py  xian_keypoints_recognition.py
src/xian_aqc_params/: CMakeLists.txt  package.xml
src/xian_aqc_params/cfg/: xian_aqc_dynamic_parameters.cfg
src/xian_aqc_params/src/: xian_aqc_dynamic_parameters_server.cpp
src/xian_aqc_utils/: CMakeLists.txt  package.xml
src/xian_aqc_utils/launch/: xian_aqc__launch.launch  xian_aqc_launch.launch  xian_aqc_restart.sh  xian_aqc_v2_ubuntu2.launch  xian_aqc_v2_ubuntu3.launch  xian_ros_log_del.sh
src/xian_aqc_utils/src/: xian_cell_guide_mask_resize_show.cpp  xian_cell_guide_point_identification_show.cpp  (+10 more)
src/xian_communication_pkg/: CMakeLists.txt  package.xml
src/xian_image_process/: CMakeLists.txt  package.xml
src/xian_msg_pkg/: CMakeLists.txt  package.xml
src/xian_sensor_pkg/: CMakeLists.txt  package.xml
xian_project_file/doc/: node_description.MD  variable_list_jetson_communicate_with_PLC.MD
xian_project_file/html/: cell_guide_masks_resize.html  cell_guide_roi.html  images_crop_process.html  keypoints_recognition.html  spreader_images.html  spreader_images_rtsp.html  system_show.html  ttest.html
xian_project_file/include/: zpmc_cv_control.h
xian_project_file/parameters/: xian_aqc_dynamic_parameters.json
(+26 files in other folders)
